feat: enhance dev environment and update schema visualization
- Simplify devcontainer setup and update dependencies, usernames,
  and port forwarding, bringing this devcontainer inline with the
  standard templates.
- Improve schema visualization layout in ent/schema-viz.html.
- Refactor task dependencies and update task messages for better clarity.

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,5 +1,4 @@
-ARG VARIANT="jammy"
-FROM buildpack-deps:${VARIANT}-curl
+FROM buildpack-deps:jammy-curl
 
 LABEL dev.containers.features="common"
 
