--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,6 +20,7 @@
             "version": "1.22.7"
         }
     },
+    "postCreateCommand": "go install github.com/amonks/run/cmd/run@v1.0.0-beta.30 && go mod tidy",
     "remoteUser": "vscode",
     "forwardPorts": [8087]
 }
