feat: add cover step to ci

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,4 +27,12 @@ jobs:
     - name: Run tests
       run: run test
 
+    - name: Run coverage
+      run: run cover
+
+    - name: Upload results to Codecov
+      uses: codecov/codecov-action@v4
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+
 
