--- a/builder/tasks.toml
+++ b/builder/tasks.toml
@@ -1,18 +1,21 @@
 [[task]]
   id = "dev"
   description = "Start the dev server"
-  dependencies = ["gqlserver", "frontend"]
+  dependencies = ["backend", "frontend", "describe"]
   type = "long"
   cmd = """
     echo "Starting the dev server..."
+    while true; do
+      sleep 1
+    done
   """
 
 [[task]]
-  id = "gqlserver"
-  description = "Start the gql server"
+  id = "backend"
+  description = "Start the backend"
   watch = ["server/**/*.go"]
-  dependencies = ["entgen", "gqlgen"]
-  type = "short"
+  dependencies = ["gqlgen"]
+  type = "long"
   cmd = """
     echo "Starting the gql server..."
     go run -mod=mod ./server/main.go
@@ -20,19 +23,22 @@
 
 [[task]]
   id = "frontend"
-  description = "Start the frontend"
-  triggers = ["gqlserver"]
-  type = "short"
+  description = "Run the frontend"
+  type = "long"
+  dependencies = ["backend", "tsgen"]
   cmd = """
     echo "Starting the frontend..."
     cd frontend && npm start
   """
 
+# ------------------------------------------------------------------------------
+# code generation
+# ------------------------------------------------------------------------------
 [[task]]
   id = "entgen"
   description = "Generate ent schema"
   type = "short"
-  watch = ["ent/schema/*.go", "gqlgen.yml"]
+  watch = ["ent/schema/*.go"]
   cmd = """
     echo "Running ent generation with entc DIRECTLY..."
     go run -mod=mod ./ent/entc.go
@@ -48,11 +54,25 @@
     go run -mod=mod github.com/99designs/gqlgen generate
   """
 
+[[task]]
+  id = "tsgen"
+  description = "Generate with gqlgen and typescript types"
+  type = "short"
+  triggers = ["gqlgen"]
+  dependencies = ["backend"]
+  cmd = """
+    echo "Generating typescript types..."
+    cd frontend && npm run compile
+  """
 
+# ------------------------------------------------------------------------------
+# visualisation
+# ------------------------------------------------------------------------------
 [[task]]
   id = "describe"
   description = "Describe the schema"
   type = "short"
+  triggers = ["entgen"]
   cmd = """
     echo "Describing the schema..."
     go run -mod=mod entgo.io/ent/cmd/ent describe ./ent/schema > ./entschema.md
