--- a/tasks.toml
+++ b/tasks.toml
@@ -36,6 +36,7 @@
 [[task]]
   id = "popper"
   type = "short"
+  env = { CLICOLOR_FORCE = "1" }
   cmd = """
     echo "Backing up data..."
     cp dev.db dev.db.bak
