--- a/tasks.toml
+++ b/tasks.toml
@@ -22,9 +22,10 @@
 #     Run in DEV mode (watch for changes)
 # ------------------------------------------------------------------------------
 [[task]]
-  id = "dev"
+  id = "devdnd"
   type = "long"
-  dependencies = ["genall"]
+  env = { CLICOLOR_FORCE = "1" }
+  dependencies = ["popper", "genall"]
   cmd = """
     echo "Running dev server..."
     go run -mod=mod cmd/dndgen/main.go
@@ -37,6 +38,7 @@
   id = "popper"
   type = "short"
   env = { CLICOLOR_FORCE = "1" }
+  dependencies = ["entgen"]
   cmd = """
     echo "Backing up data..."
     cp dev.db dev.db.bak
@@ -54,7 +56,7 @@
 [[task]]
   id = "genall"
   description = "Generate all"
-  dependencies = ["entgen", "popgen", "gqlgen", "describe", "entvizfix"]
+  dependencies = ["entgen", "popgen", "gqlgen", "describe"]
   type = "short"
 
 [[task]]
