--- a/tasks.toml
+++ b/tasks.toml
@@ -38,7 +38,7 @@
   id = "popper"
   type = "short"
   env = { CLICOLOR_FORCE = "1" }
-  dependencies = ["entgen"]
+  # dependencies = ["entgen"]
   cmd = """
     echo "Backing up data..."
     cp dev.db dev.db.bak
