feat: add equipment edges

--- a/tasks.toml
+++ b/tasks.toml
@@ -4,18 +4,9 @@
 [[task]]
   id = "dndgen"
   type = "short"
-  dependencies = ["build"]
   cmd = """
-    echo "Running binary..."
-    ./bin/dndgen
-  """
-
-[[task]]
-  id = "build"
-  type = "short"
-  cmd = """
-    echo "Building binary..."
-    go build -mod=mod -o ./bin/dndgen cmd/dndgen/main.go
+    echo "Running dndgen..."
+    go run -mod=mod cmd/dndgen/main.go
   """
 
 # ------------------------------------------------------------------------------
