--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "latest",
-    "@emotion/styled": "latest",
+    "@apollo/client": "^3.11.8",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.1",
-    "@mui/material": "latest",
+    "@mui/material": "^6.1.1",
     "@types/react": "latest",
     "@types/react-dom": "latest",
+    "graphql": "^16.9.0",
     "react": "latest",
     "react-dom": "latest",
     "react-scripts": "latest",
