--- a/tasks.toml
+++ b/tasks.toml
@@ -4,6 +4,7 @@
 [[task]]
   id = "dndgen"
   type = "short"
+  env = { CLICOLOR_FORCE = "1" }
   cmd = """
     echo "Running dndgen..."
     go run -mod=mod cmd/dndgen/main.go
