--- a/tasks.toml
+++ b/tasks.toml
@@ -2,12 +2,21 @@
 #     General tasks
 # ------------------------------------------------------------------------------
 [[task]]
-  id = "dndgen"
+  id = "dev"
   type = "short"
   env = { CLICOLOR_FORCE = "1" }
+  dependencies = ["frontend"]
   cmd = """
     echo "Running dndgen..."
     go run -mod=mod cmd/dndgen/main.go
+  """
+
+[[task]]
+  id = "frontend"
+  type = "short"
+  cmd = """
+    echo "Running frontend..."
+    cd frontend && npm start
   """
 
 # ------------------------------------------------------------------------------
