--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/client-preset": "^4.3.3",
     "@graphql-typed-document-node/core": "^3.2.0",
+    "@mui/base": "^5.0.0-beta.58",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "@types/react": "latest",
